plugins/mermaid/plugin/src/test/resources/intention/declarations/cherry-pick.mermaid
gitgraph
  cherry-pick id: "<error descr="Unresolved commit id">123</error>"